<resources>
    <string name="app_name">SettingsApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_auto_sync_summary">Enable auto sync</string>
    <string name="pref_auto_sync_title">Auto sync data</string>

    <string name="pref_title_display_name">User name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_sync_time">Sync time</string>
    <string-array name="pref_sync_time_list_titles">
        <item>1 second</item>
        <item>5 second</item>
        <item>15 second</item>
        <item>30 second</item>
        <item>1 minute</item>
        <item>5 minute</item>
        <item>10 minute</item>
    </string-array>
    <string-array name="pref_sync_time_list_values">
        <item>1000</item>
        <item>5000</item>
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
</resources>
